syntax = "proto3";
import "common.proto";
package shard_net;

service ShardService {
  rpc ShardExecAppend(ExecAppendRequest) returns (common_decls.ExecNotifRequest);
  rpc ShardExecRead(ExecReadRequest) returns (common_decls.Empty);
  rpc PutRead(PutReadRequest) returns (common_decls.Empty);
}

message ExecAppendRequest {
  map<string, common_decls.TransactionOp> txn = 1;
  uint64 ind = 2;
  uint64 sn = 3;
  optional LocalDeps localDeps = 4; /// each key guaranteed to be unique
}

message ExecReadRequest {
  repeated string txn = 1;
  common_decls.Csn csn = 2;
  uint64 fence = 3;
  uint32 numShards = 4;
  string addr = 5; /// so we know where to send results
}

message PutReadRequest {
  uint64 ind = 1;
  map<string, common_decls.ValueField> res = 2;
}


message LocalDeps {
  repeated string keys = 1;
}

